---------------------------------------------------------------------------------------------------
Version: 1.4.5
Date: ????
  Bugfixes:
    - Fixed that backfilling a quality milestone would wrongly copy the time of an existing milestone with a different quality. (Thanks to stef77)
    - Fixed that pressing E on the settings UI would just close the UI and lose all changes instead of confirming them.

  Locale:
    - Chinese translation update thanks to luaotix.

---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 2025-01-30
  Changes:
    - Added support for quality kills, for players who play with mods that add quality enemies.

  Bugfixes:
    - Fixed crash when importing a preset.
    - Fixed rare crash when another mod changes a player's force the moment the game is created.
    - Fixed that the Milestones GUI would not show any milestone when the set only had 1 milestone group and 0 incomplete milestones (but still some completed milestones).

---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 2024-12-16
  Bugfixes:
    - Fixed a data stage crash caused by a breaking change in flib.

  Locale:
    - Translation updates for German, French, Spanish, and Catalan.

---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 2024-11-12
  Changes:
    - When reaching a milestone with a quality condition, the message will now indicate the quality (e.g. "Created the first Rare Power Armor")

  Locale:
    - Added Brazilian Portuguese translation thanks to Lucas (Oliveira).

---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2024-10-14
  Bugfixes:
    - Fixed new surfaces not being considered for milestone checks.
    - Fixed crash when removing a mod that added quality levels.
